feat: :wrench: configuracion de las migraciones y sus semillas

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "../public/backend/angular",
+            "outputPath": "../backend/public/angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -92,5 +92,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "b6409909-8622-4a75-a8cd-13aefab04127"
   }
 }
