--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "src/variables.css",
               "src/styles.css"
             ],
             "scripts": []
